--- a/StreamJsonRpc.Sample.Client/StreamJsonRpc.Sample.Client.csproj
+++ b/StreamJsonRpc.Sample.Client/StreamJsonRpc.Sample.Client.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="StreamJsonRpc" Version="1.4.46-beta" />
+  </ItemGroup>
+
 </Project>
