Update sample dependencies

--- a/StreamJsonRpc.Sample.Web/StreamJsonRpc.Sample.Web.csproj
+++ b/StreamJsonRpc.Sample.Web/StreamJsonRpc.Sample.Web.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <TypeScriptToolsVersion>2.8</TypeScriptToolsVersion>
+    <TypeScriptToolsVersion>3.7</TypeScriptToolsVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,7 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
-    <PackageReference Include="StreamJsonRpc" Version="1.4.46-beta" />
+    <PackageReference Include="StreamJsonRpc" Version="2.2.34" />
   </ItemGroup>
 
   <ItemGroup>
