--- a/StreamJsonRpc.Sample.Server/StreamJsonRpc.Sample.Server.csproj
+++ b/StreamJsonRpc.Sample.Server/StreamJsonRpc.Sample.Server.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="StreamJsonRpc" Version="1.4.46-beta" />
+    <PackageReference Include="StreamJsonRpc" Version="2.2.34" />
   </ItemGroup>
 
 </Project>
